# biometrias

./: .gitignore  BOSQUEJO_HERRAMIENTAS_FRONTEND.docx  CAMBIOS_PASSWORD_SECURITY.md  CAMBIOS_SINCRONIZACION.md  CAPITULO_4_RESULTADOS_VALIDACION.docx  CHECKLIST_VERIFICACION.md  CMakeLists.txt  COMPILAR_LIBRERIA_NATIVA.md  COMPILAR_NUEVA_VERSION_OREJA.md  COPIAR_SO_ACTUALIZADO.md  ENTREGA_FINAL.md  EXPLICACION_TEMPLATES_OREJA.md  Endpoints_oreja.txt  Endpoints_voz.txt  FINAL_BIOMETRIC_ONLY.md  FIX_ANR_REGISTRO_VOZ.md  FIX_AUTENTICACION_VOZ_DENEGADA.md  FIX_COMPILACION_CMAKE_ANDROID.md  FIX_CONSERVAR_MODELOS_VOZ_PRECARGADOS.md  FIX_CONSERVAR_TEMPLATES_OREJA_BASE.md  FIX_DUPLICACION_CREDENCIALES_OREJA.md  FIX_FFI_UTF8_TO_CHAR.md  FIX_HYBRID_AUTH_SERVICE.md  FIX_ID_CONFLICT_TEMPLATES.md  FIX_LIBOMP_MISSING.md  FIX_LOGIN_CAMPOS_RESULTADO.md  FIX_LOGIN_FRASES_OFFLINE.md  FIX_MODELO_NO_CARGADO_SVM.md  FIX_MODELO_VOZ_NO_CARGADO_LOGIN.md  FIX_SERVICIO_NATIVO_MOBILE.md  GUIA_COMPILACION_COMPAÑERO.md  GUIA_SINCRONIZACION_REACTIVA.md  IMPLEMENTACION_MOBILE_COMPLETA.md  IMPLEMENTACION_OREJA_OFFLINE.md  INSTRUCCIONES_REINICIO.md  JIRA_EPIC_HISTORIAS_USUARIO.docx  JIRA_EPIC_HISTORIAS_USUARIO.md  OFFLINE_SYNC_QUICK_REFERENCE.md  PASSWORD_SECURITY.md  PASSWORD_SECURITY_QUICK_START.md  (+21 more)
backend/: .env.example  package-lock.json  package.json
backend/migrations/: 001_init_schema.sql  002_fix_nullable_id_usuario.sql  003_add_password_hash.sql  004_remove_password_hash.sql  005_clean_data.sql  006_sistema_auditoria.sql  006_sistema_auditoria_clean.sql  007_sync_flags.sql  007_sync_flags_fix.sql  runMigrations.js
backend/src/: index.js
backend/src/config/: database.js
backend/src/controllers/: AuthController.js  SincronizacionController.js
backend/src/middleware/: auditoria.js  auth.js
backend/src/models/: CredencialBiometrica.js  Usuario.js  ValidacionBiometrica.js
backend/src/routes/: auditRoutes.js  authRoutes.js  biometriaRoutes.js  syncRoutes.js
backend/src/services/: SyncFlagsService.js
backend/src/utils/: PasswordService.js
docs/: API.md  BIOMETRIC_INTEGRATION.md  OFFLINE_SYNC_DIAGRAMS.md  OFFLINE_SYNC_GUIDE.md  OFFLINE_SYNC_IMPLEMENTATION.md  OFFLINE_SYNC_QUICK_START.md  SETUP_RAPIDO.md
documentacion/: ADMIN_PANEL_CLEANUP_COMPLETADO.md  ADMIN_PANEL_GUIDE.md  BACKEND_SETUP_RAPIDO.md  BOSQUEJO_HERRAMIENTAS_FRONTEND.md  CAMBIO_NOMBRE_APP.md  CAPITULO3_METODOLOGIA_COMPLETO.docx  CAPITULO3_TAREA_3.1_DISEÑO_METODOLOGICO.md  CAPITULO_1_TESIS.docx  CAPITULO_1_TESIS.md  CAPITULO_2_MARCO_TEORICO_COMPLETO.docx  CAPITULO_3_MARCO_TEORICO.docx  CAPITULO_3_MARCO_TEORICO.md  CAPITULO_3_MARCO_TEORICO_EXTENDIDO.docx  CAPITULO_4_RESULTADOS_VALIDACION.md  CAPITULO_5_CONCLUSIONES_RECOMENDACIONES.md  CLASIFICADOR_TFLITE_INTEGRADO.md  COMO_ACCEDER_PANEL_ADMIN.md  COMO_PROBAR_SYNC.md  COMPILACION_NATIVA_EXITOSA.md  COMPILAR_WINDOWS_GUIA.md  CONTROL_MENSAJES_OFFLINE.md  DB_SYNC_MAPPING.md  DETECTOR_ANATOMICO_OREJAS.md  DIAGRAMA_SINCRONIZACION.md  ESTADO_ACTUAL.md  ESTRUCTURA_VISUAL.md  FFI_VOICE_MFCC_NATIVO.md  FIXES_IMPLEMENTADAS.md  FIX_AUTENTICACION_CLOUD_FIRST.md  FIX_AUTENTICACION_LOCAL_EMBEDDINGS.md  FIX_AUTENTICACION_VOZ_DENEGADA.md  FIX_COLA_SINCRONIZACION.md  FIX_DATEPICKER_CRASH.md  FIX_VALIDACION_REACTIVA.md  FIX_VALIDACION_VOZ_DURACION.md  GUIA_PRUEBAS_RAPIDA.md  IMPLEMENTACION_FRASES_VOZ_LOGIN.md  INDICE_DOCUMENTACION.md  INTEGRACION_BACKEND_NUBE.md  INTEGRACION_BACKEND_POSTGRESQL.md  (+31 more)
mobile_app/: CAMARA_VOLTEAR_IMPLEMENTADA.md  CONFIGURACION_MODELO_CORRECTO.md  DIAGNOSTICO_MODELO_99PORCIENTO.md  FIX_FALSOS_POSITIVOS.md  FUNCIONALIDAD_ADMIN_PANEL.md  INSTRUCCIONES_VERIFICAR_ORDEN.md  INTEGRACION_SVM_CLASIFICADOR.md  ORDEN_CLASES_CORRECTO.md  SOLUCION_FINAL_SVM.md  SOLUCION_MODELO_TFLITE.md  TEST_RESULTS.md  USAR_LIBVOZ_MOBILE_SO.md  VALIDACION_OREJAS_TFLITE.md  add_delete_restore_buttons.py  check_class_order.py  clean_login.py  fix_admin_panel.py  pubspec.yaml  test_hash.dart
mobile_app/android/app/: build.gradle.kts
mobile_app/assets/models/: modelo_oreja.tflite
mobile_app/ios/Runner/: Info.plist
mobile_app/ios/Runner.xcodeproj/: project.pbxproj
mobile_app/lib/: GUIA_IMPLEMENTACION_FLUTTER_MOBILE.md  main.dart
mobile_app/lib/config/: api_config.dart  database_config.dart  environment_config.dart
mobile_app/lib/entrega_flutter_mobile/: README.md
mobile_app/lib/examples/: README_SISTEMA_HIBRIDO.md  backend_integration_example.dart  cloud_backend_example.dart  login_hibrido_screen.dart  registro_hibrido_screen.dart  sync_example_screen.dart
mobile_app/lib/models/: admin_settings.dart  biometric_models.dart  credencial_biometrica.dart  user.dart
mobile_app/lib/screens/: admin_access_button.dart  admin_login_screen.dart  admin_panel_screen.dart  camera_capture_screen.dart  home_screen.dart  login_screen.dart  metrics_screen.dart  register_screen.dart  test_sync_screen.dart
mobile_app/lib/services/: admin_settings_service.dart  audio_service.dart  auth_service.dart  auth_service_fix.dart  backend_service.dart  bidirectional_sync_service.dart  biometric_backend_service.dart  biometric_service.dart  camera_service.dart  ear_validator_service.dart  hybrid_auth_service.dart  local_database_service.dart  ml_pipeline_service.dart  native_ear_mobile_service.dart  native_voice_mobile_service.dart  native_voice_service.dart  offline_sync_service.dart  password_service.dart  (+4 more)
mobile_app/linux/: CMakeLists.txt
mobile_app/test/: admin_auth_test.dart  biometric_registration_login_test.dart  voice_authentication_test.dart  widget_test.dart
mobile_app/web/: index.html  manifest.json
mobile_app/windows/: CMakeLists.txt
native/voice_mfcc/: CMakeLists.txt  build_android.bat  build_android.sh  build_ndk.bat  voice_mfcc.cpp
native/voice_mfcc/jni/: Android.mk  Application.mk
testing/jmeter/: BiometricAuth_Backend_Load_Test.jmx  BiometricAuth_Stress_Test.jmx  CORRECCION_APLICADA.md  JMETER_IMPLEMENTACION.md  README.md  RESUMEN_IMPLEMENTACION.md  SOLUCION_ERROR_PLUGINS.md  fix_jmeter_plugins.bat  fix_jmx_files.bat  quick_start.bat  quick_start.sh  run_all_tests.bat  run_all_tests.sh
(+38 files in other folders)
